OAK-11307 remove use of guava lists from PropertyIndexCommonTest